# web-crawler

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  dashboard.html  main.py  release-for-win.sh
public/: index.html
public/css/: bulma.css
src/: cli.rs  crawler.rs  env.rs  main.rs  test.rs
