[package]
name = "web-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["blocking"] }
select = "0.6.0"
thiserror = "1.0.48"
url = "2.4.1"
