[package]
name = "web-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.4.0"
async-trait = "0.1.73"
clap = { version = "4.4.5", features = ["derive"] }
env_logger = "0.10.0"
eyre = "0.6.8"
hyper = { version = "0.14.27", features = ["full"] }
log = "0.4.20"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["blocking"] }
select = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
url = "2.4.1"
