[package]
name = "web-crawler"
version = "0.0.2"
edition = "2021"
description = "Web crawler tool"
authors = ["mbsdsc2023-cid (Zakki <zakki0925224@gmail.com>)"]
license = "MIT"
repository = "https://github.com/mbsdsc2023-cid/web-crawler"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.4.0"
env_logger = "0.10.0"
hyper = { version = "0.14.27", features = ["full"] }
log = "0.4.20"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["blocking"] }
select = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.33.0", features = ["macros"] }
url = "2.4.1"
